[project]
name = "bolt"
version = "0.1.0"
description = "Client library for interacting with Bolt Fleet Integration API and Supabase"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
authors = [
    {name = "Nasrul Huda", email = "nasrul2001@gmail.com"}
]
license = "MIT"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["bolt_client", "bolt_schemas"]
